--- a/src/app/pages/public/page-not-found/page-not-found.component.html
+++ b/src/app/pages/public/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>page-not-found works!</p>
+<p>page-not-found works! </p>
+<app-table-component [data]="competencias.data" [idsetor]="idsetor">
+</app-table-component>
