--- a/src/app/pages/private/dashboard/dashboard.component.html
+++ b/src/app/pages/private/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
 <p>dashboard works!</p>
 
-<app-table-component [data]="competencias.data" [idsetor]="idsetor">
+<app-table-component
+    [data]="competencias.data"
+    [idsetor]="idsetor"
+    [totaldata]="counttotaldata"
+>
 </app-table-component>
 
