feat(IN-875): implementacao leyout da tela principal

--- a/src/app/pages/private/dashboard/dashboard.component.html
+++ b/src/app/pages/private/dashboard/dashboard.component.html
@@ -6,6 +6,8 @@
     [totaldata]="counttotaldata"
     (loadnextpage)="loadNextPage($event)"
     (loadbackpage)="loadBackPage($event)"
+    [currentlast]="currentlast"
+
 >
 </app-table-component>
 
