--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -1,8 +1,31 @@
 
+
+   
+
 <div class="container-fluid">
+    <p-dropdown  style="padding-bottom: 10px;"  [options]="cities" [(ngModel)]="selectedCityCode" optionLabel="name" optionValue="code"></p-dropdown>
+    
+<div style="padding-bottom: 10px;padding-top:10px" class="row">
+  
+    <div class="col-6">
+        <span class="p-buttonset">
+            <button pButton type="button"  class="orange-button" label="Copiar" icon="pi pi-check"></button>
+            <button pButton type="button" label="Excel" icon="pi pi-trash"></button>
+            <button pButton type="button" label="Pdf" icon="pi pi-times"></button>
+        </span>
+    </div>
+    <div class="col-6">
+        <div class="p-inputgroup">
+            <span class="p-inputgroup-addon"><i class="pi pi-search"></i></span>
+            <input type="text" pInputText placeholder="Buscar">         
+        </div>
+
+    </div>
+</div>
+
 <p-table #dt   (onLazyLoad)="loadPage($event, dt)"  
       [paginator]="true"  
-      [rows]="5" 
+      [rows]="10" 
       [lazy]="true" 
       [totalRecords]="totaldata" 
       tyle="font-size:16px;padding:20px"
