--- a/src/app/pages/private/dashboard/dashboard.component.html
+++ b/src/app/pages/private/dashboard/dashboard.component.html
@@ -7,9 +7,8 @@
     (loadnextpage)="loadNextPage($event)"
     (loadbackpage)="loadBackPage($event)"
     [currentlast]="currentlast"
-
+    (searchdata)="searchCompetencia($event)"
 >
 </app-table-component>
-
 
 
