feat(IN-8785): ajustes bugs modal, e melhorias de codigo

--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -4,17 +4,15 @@
 
 <div class="container-fluid">
     <p-dropdown  style="padding-bottom: 10px;"  [options]="cities" [(ngModel)]="selectedCityCode" optionLabel="name" optionValue="code"></p-dropdown>
-{{inputCompetencia | json}}
+
 
 <input type="text" [(ngModel)]="modalcreate.competencia"   class="form-control" placeholder="">
-
-{{modalcreate.competencia}}
     
 <div style="padding-bottom: 10px;padding-top:10px" class="row">
   
     <div class="col-6">
         <span class="p-buttonset">
-            <button type="button" pButton pRipple icon="pi pi-file"  class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button>
+            <button type="button" pButton pRipple icon="pi pi-file" (click)="showConfirm()"  class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button>
             <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportDataToXlsx()" class="p-button-success mr-2"  pTooltip="XLS" tooltipPosition="bottom"></button>
             <button type="button" pButton pRipple icon="pi pi-file-pdf"  class="p-button-warning mr-2" pTooltip="PDF" tooltipPosition="bottom"></button>
         </span>
@@ -27,6 +25,37 @@
 
     </div>
 </div>
+
+
+<p-toast></p-toast>
+
+
+
+
+<p-toast position="bottom-center" key="c"  [baseZIndex]="5000">
+    <ng-template let-message pTemplate="message">
+        <div class="p-flex p-flex-column" style="flex: 1">
+            <div class="p-text-center">
+                <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+                <h4>{{message.summary}}</h4>
+                <p>{{message.detail}}</p>
+            </div>
+            <div class="p-grid p-fluid">
+                <div class="p-col-6">
+                    <button type="button" pButton  label="Yes" class="p-button-success"></button>
+                </div>
+                <div class="p-col-6">
+                    <button type="button" pButton  label="No" class="p-button-secondary"></button>
+                </div>
+            </div>
+        </div>
+    </ng-template>
+</p-toast>
+
+
+
+
+
 
 
 
@@ -157,9 +186,6 @@
             <td *ngIf="idsetor == 8">  <p-progressBar [value]="competencia.percTotalDeclaracoes"></p-progressBar> </td>
             <td>    <button [routerLink]="['/listempresas', competencia.id_empresa_competencia]" type="button" pButton pRipple icon="pi pi-align-justify "  class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> <button type="button" pButton pRipple icon="pi pi-plus"  (click)="openModalNewEmpresaDctf(competencia)" class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> <button (click)="openModalStatusCompetencia(competencia)" type="button" pButton pRipple icon="pi pi-tags"  class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> 
             </td>
-
-
-            
 
         </tr>
     </ng-template>
