feat(IN-875): ajustes de estrutura de codigo

--- a/src/app/pages/private/dashboard/dashboard.component.html
+++ b/src/app/pages/private/dashboard/dashboard.component.html
@@ -8,6 +8,7 @@
     (loadbackpage)="loadBackPage($event)"
     [currentlast]="currentlast"
     (searchdata)="searchCompetencia($event)"
+    (onchangData)="onChangData()"
 >
 </app-table-component>
 
