--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -1,187 +1,88 @@
-
-
-   
-
 <div class="container-fluid">
-    <p-dropdown  style="padding-bottom: 10px;"  [options]="cities" [(ngModel)]="selectedCityCode" optionLabel="name" optionValue="code"></p-dropdown>
+  <p-dropdown style="padding-bottom: 10px;" [options]="cities" [(ngModel)]="selectedCityCode" optionLabel="name"
+    optionValue="code"></p-dropdown>
+
+  <div style="padding-bottom: 10px;padding-top:10px" class="row">
+
+    <div class="col-6">
+      <span class="p-buttonset">
+        <button type="button" pButton pRipple icon="pi pi-file"  class="mr-2" pTooltip="CSV"
+          tooltipPosition="bottom"></button>
+        <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportDataToXlsx()"
+          class="p-button-success mr-2" pTooltip="XLS" tooltipPosition="bottom"></button>
+        <button type="button" pButton pRipple icon="pi pi-file-pdf" class="p-button-warning mr-2" pTooltip="PDF"
+          tooltipPosition="bottom"></button>
+      </span>
+    </div>
+    <div class="col-6">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-search"></i></span>
+        <input type="text" [(ngModel)]="searchValue" (input)="searchData()" pInputText placeholder="Buscar">
+      </div>
+
+    </div>
+  </div>
 
 
-<input type="text" [(ngModel)]="modalcreate.competencia"   class="form-control" placeholder="">
-    
-<div style="padding-bottom: 10px;padding-top:10px" class="row">
+  <p-toast></p-toast>
+
+
+  <app-modais-empresas 
+  [displaymodalstatusCompetencia]="modalstatusCompetencia"
+  [competenciaModal]="competenciaModal"
+  [competenciaModalStatusCompetencia]="competenciaModalStatusCompetencia"
+  [displayModalCreateEmpresa]="displayModalCreateEmpresa"
+  [empresasModal]="empresasModal"
+  (closedModalCreateEmpresa)="closedModalCreateEmpresa()"
+  (closeModalstatusCompetencia)="closeModalstatusCompetencia()"
+  (onchangData)="onChangData()"
+  ></app-modais-empresas>
   
-    <div class="col-6">
-        <span class="p-buttonset">
-            <button type="button" pButton pRipple icon="pi pi-file" (click)="showConfirm()"  class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button>
-            <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportDataToXlsx()" class="p-button-success mr-2"  pTooltip="XLS" tooltipPosition="bottom"></button>
-            <button type="button" pButton pRipple icon="pi pi-file-pdf"  class="p-button-warning mr-2" pTooltip="PDF" tooltipPosition="bottom"></button>
-        </span>
-    </div>
-    <div class="col-6">
-        <div class="p-inputgroup">
-            <span class="p-inputgroup-addon"><i class="pi pi-search"></i></span>
-            <input type="text" [(ngModel)]="searchValue" (input)="searchData()" pInputText placeholder="Buscar">      
-        </div>
 
-    </div>
-</div>
-
-
-<p-toast></p-toast>
-
-
-
-
-<p-toast position="bottom-center" key="c"  [baseZIndex]="5000">
-    <ng-template let-message pTemplate="message">
-        <div class="p-flex p-flex-column" style="flex: 1">
-            <div class="p-text-center">
-                <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
-                <h4>{{message.summary}}</h4>
-                <p>{{message.detail}}</p>
-            </div>
-            <div class="p-grid p-fluid">
-                <div class="p-col-6">
-                    <button type="button" pButton   label="Yes" class="p-button-success"></button>
-                </div>
-                <div class="p-col-6">
-                    <button type="button" pButton  label="No" class="p-button-secondary"></button>
-                </div>
-            </div>
-        </div>
-    </ng-template>
-</p-toast>
-
-
-
-
-<p-dialog  [modal]="true" [style]="{width: '50vw'}" [maximizable]="true" [baseZIndex]="10000" header="Alterar Status da Competência" [(visible)]="modalstatusCompetencia"  [style]="{width: '50vw'}" [baseZIndex]="10000">
-    <form>
-        <div class="row">           
-          <input type="hidden" id="id_empresa_competencia"  [(ngModel)]="competenciaModal.id_empresa_competencia" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="">
-          <div class="col">
-            <label>Competência</label>
-            <input type="text"   [(ngModel)]="competenciaModalStatusCompetencia.competencia" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="" disabled="true">
-        </div>
-        <div class="col">
-            <label>Competência</label>
-            <select  [(ngModel)]="competenciaModalStatusCompetencia.status" [ngModelOptions]="{standalone: true}" class="form-control form-control-sm">
-                <option value="1">Ativo</option>
-                <option value="2">Controller</option>
-                <option value="3">fechado</option>
-                <option value="99">excluir</option>
-            </select>
-        </div>
-        </div>   
-      </form>
-    
-    <ng-template pTemplate="footer">
-        <p-button icon="pi pi-check" label="Cancelar" styleClass="p-button-text"></p-button>
-        <p-button icon="pi pi-times"  (click)="updateStatusDctf()" label="Salvar"></p-button>
-    </ng-template>
-</p-dialog>
-
-
-<p-dialog  [modal]="true" [style]="{width: '50vw'}" [maximizable]="true" [baseZIndex]="10000" header="Incluir Empresa DCTF-WEB" [(visible)]="displayModalCreateEmpresa"  [style]="{width: '50vw'}" [baseZIndex]="10000">
-    <form>
-        <div class="row">           
-          <input type="hidden" id="id_empresa_competencia"  [(ngModel)]="competenciaModal.id_empresa_competencia" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="">
-          <div class="col">
-            <label>Competência</label>
-            <input type="text"   [(ngModel)]="competenciaModal.competencia" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="" disabled="true">
-          </div>
-          <div class="col">
-            <label>Empresa</label>
-            <p-dropdown [filter]="true" filterBy="nome"
-            [showClear]="true" placeholder="Select a Country" 
-            [style]="{'minWidth':'100%'}"  [options]="empresasModal.data" 
-            [(ngModel)]="selectedCityCode" optionLabel="nome"
-            ></p-dropdown>
-          </div>
-        </div>
-
-       <div style="margin-top: 10px;" class="row">
-            <div class="col">
-                <label>Status</label>
-                <select  [(ngModel)]="competenciaModal.status" [ngModelOptions]="{standalone: true}" class="form-control form-control-sm">
-                    <option selected value="1">Ativa</option>
-                    <option value="2">Inativa</option>
-                </select>
-            </div>
-            <div class="col">
-                 <label>Prioridade</label>
-                <select  [(ngModel)]="competenciaModal.prioridade" [ngModelOptions]="{standalone: true}" class="form-control form-control-sm">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="2">3</option>
-                </select>
-            </div>
-       </div>
-
-       <div style="margin-top: 10px;" class="row">
-            <div class="col">
-                <label>Faturamento R$</label>
-                <input step="0.01"  [(ngModel)]="competenciaModal.faturamento" [ngModelOptions]="{standalone: true}"  type="number"  class="form-control" placeholder="">
-            </div>
-            <div class="col">
-            </div>
-        </div>
-
-        <div style="margin-top: 10px;" class="row">
-            <div class="col">
-                <label>Comentário</label>
-                <textarea [(ngModel)]="competenciaModal.comentario" [ngModelOptions]="{standalone: true}" type="number" class="form-control" placeholder=""></textarea>
-            </div>
-        </div>
-         
-      </form>
-    
-    <ng-template pTemplate="footer">
-        <p-button icon="pi pi-check" label="Cancelar" styleClass="p-button-text"></p-button>
-        <p-button icon="pi pi-times" (click)="salvarDctf()" label="Salvar"></p-button>
-    </ng-template>
-</p-dialog>
-
-<p-table  id="excel-table" #dt   (onLazyLoad)="loadPage($event, dt)"  
-      [paginator]="true"  
-      [rows]="10" 
-      [lazy]="true" 
-      [totalRecords]="totaldata" 
-      tyle="font-size:16px;padding:20px"
-      [value]="data" responsiveLayout="scroll">
+  <p-table id="excel-table" #dt (onLazyLoad)="loadPage($event, dt)" [paginator]="true" [rows]="10" [lazy]="true"
+    [totalRecords]="totaldata" tyle="font-size:16px;padding:20px" [value]="data" responsiveLayout="scroll">
     <ng-template pTemplate="header">
-        <tr>
-            <th>Cod.</th>
-            <th>Competência</th>
-            <th>Responsável</th>
-            <th>Data de Geração</th>
-            <th>Data Limite de Execução</th>
-            <th>Data Limite de Transmissão</th>
-            <th *ngIf="idsetor == 3 || (idsetor != 3 && idsetor != 2 && idsetor != 8 )">RH - % Completo</th>
-            <th *ngIf="idsetor == 2">Fiscal - % Completo</th>
-            <th *ngIf="idsetor == 8">Declarações - % Completo</th>
-            <th *ngIf="idsetor == 8">Ações</th>
-        </tr>
+      <tr>
+        <th>Cod.</th>
+        <th>Competência</th>
+        <th>Responsável</th>
+        <th>Data de Geração</th>
+        <th>Data Limite de Execução</th>
+        <th>Data Limite de Transmissão</th>
+        <th *ngIf="idsetor == 3 || (idsetor != 3 && idsetor != 2 && idsetor != 8 )">RH - % Completo</th>
+        <th *ngIf="idsetor == 2">Fiscal - % Completo</th>
+        <th *ngIf="idsetor == 8">Declarações - % Completo</th>
+        <th *ngIf="idsetor == 8">Ações</th>
+      </tr>
     </ng-template>
     <ng-template pTemplate="body" let-competencia>
-        <tr>
-            <td>{{ competencia.id_empresa_competencia }}</td>
-            <td>{{ competencia.competencia }}</td>
-            <td>{{ competencia.responsavel }}</td>
-            <td>{{ competencia.data_criacao }}</td>
-            <td>{{ competencia.data_limite_execucao }}</td>
-            <td>{{ competencia.data_limite_transmissao }}</td>
-            
+      <tr>
+        <td>{{ competencia.id_empresa_competencia }}</td>
+        <td>{{ competencia.competencia }}</td>
+        <td>{{ competencia.responsavel }}</td>
+        <td>{{ competencia.data_criacao }}</td>
+        <td>{{ competencia.data_limite_execucao }}</td>
+        <td>{{ competencia.data_limite_transmissao }}</td>
 
-            <td *ngIf="idsetor == 3  || (idsetor != 3 && idsetor != 2 && idsetor != 8 ) "> <p-progressBar [value]="competencia.percDarf"></p-progressBar></td>
-            <td *ngIf="idsetor == 2"> <p-progressBar [value]="competencia.percTotalFiscalRet"></p-progressBar> </td>
-            <td *ngIf="idsetor == 8">  <p-progressBar [value]="competencia.percTotalDeclaracoes"></p-progressBar> </td>
-            <td>    <button [routerLink]="['/listempresas', competencia.id_empresa_competencia]" type="button" pButton pRipple icon="pi pi-align-justify "  class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> <button type="button" pButton pRipple icon="pi pi-plus"  (click)="openModalNewEmpresaDctf(competencia)" class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> <button (click)="openModalStatusCompetencia(competencia)" type="button" pButton pRipple icon="pi pi-tags"  class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> 
-            </td>
 
-        </tr>
+        <td *ngIf="idsetor == 3  || (idsetor != 3 && idsetor != 2 && idsetor != 8 ) ">
+          <p-progressBar [value]="competencia.percDarf"></p-progressBar>
+        </td>
+        <td *ngIf="idsetor == 2">
+          <p-progressBar [value]="competencia.percTotalFiscalRet"></p-progressBar>
+        </td>
+        <td *ngIf="idsetor == 8">
+          <p-progressBar [value]="competencia.percTotalDeclaracoes"></p-progressBar>
+        </td>
+        <td> <button [routerLink]="['/listempresas', competencia.id_empresa_competencia]" type="button" pButton pRipple
+            icon="pi pi-align-justify " class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> <button
+            type="button" pButton pRipple icon="pi pi-plus" (click)="openModalNewEmpresaDctf(competencia)" class="mr-2"
+            pTooltip="CSV" tooltipPosition="bottom"></button> <button (click)="openModalStatusCompetencia(competencia)"
+            type="button" pButton pRipple icon="pi pi-tags" class="mr-2" pTooltip="CSV"
+            tooltipPosition="bottom"></button>
+        </td>
+
+      </tr>
     </ng-template>
-</p-table>
+  </p-table>
 </div>
-
-
