--- a/src/app/components/modais-empresas/modais-empresa.component.html
+++ b/src/app/components/modais-empresas/modais-empresa.component.html
@@ -26,13 +26,14 @@
   </p-toast>
 
   <!-- Modal de alteração do status da competencia -->
-  <p-dialog [modal]="true" [style]="{width: '50vw'}" [maximizable]="true" (onHide)="emitCloseModalStatusEmpresa()" [baseZIndex]="10000"
-    header="Alterar Status da Competência"  [(visible)]="displaymodalstatusCompetencia" [style]="{width: '50vw'}"
-    [baseZIndex]="10000">
+  <p-dialog [modal]="true" [style]="{width: '50vw'}" [maximizable]="true" (onHide)="emitCloseModalStatusEmpresa()"
+    [baseZIndex]="10000" header="Alterar Status da Competência" [(visible)]="displaymodalstatusCompetencia"
+    [style]="{width: '50vw'}" [baseZIndex]="10000">
     <form>
       <div class="row">
-        <input type="hidden" id="id_empresa_competencia" [(ngModel)]="competenciaModalStatusCompetencia.id_empresa_competencia"
-          [ngModelOptions]="{standalone: true}" class="form-control" placeholder="">
+        <input type="hidden" id="id_empresa_competencia"
+          [(ngModel)]="competenciaModalStatusCompetencia.id_empresa_competencia" [ngModelOptions]="{standalone: true}"
+          class="form-control" placeholder="">
         <div class="col">
           <label>Competência</label>
           <input type="text" [(ngModel)]="competenciaModalStatusCompetencia.competencia"
@@ -53,14 +54,62 @@
 
     <ng-template pTemplate="footer">
       <p-button icon="pi pi-check" label="Cancelar" styleClass="p-button-text"></p-button>
-      <p-button icon="pi pi-times" [loading]="loadingProcessingStatus" (click)="updateStatusDctf()" label="Salvar"></p-button>
+      <p-button icon="pi pi-times" [loading]="loadingProcessingStatus" (click)="updateStatusDctf()" label="Salvar">
+      </p-button>
+    </ng-template>
+  </p-dialog>
+
+
+  <!-- Modal gerar competencia -->
+  <p-dialog [modal]="true" [style]="{width: '50vw'}" [maximizable]="true" (onHide)="emitCloseModalGerarCompetencia()"
+    [baseZIndex]="10000" header="Gerar Nova Competência" [(visible)]="displayModalGerarCompetencia"
+    [style]="{width: '50vw'}" [baseZIndex]="10000">
+    <form>
+      <div class="row">
+        <div class="col">
+          <label>Competência</label>
+          <select [(ngModel)]="dadosModalGerarCompetencia.competencia" id="competencia" name="competencia"
+            class="form-control" required>
+            <option value="0" selected="selected"></option>
+            <option value="1">JANEIRO</option>
+            <option value="2">FEVEREIRO</option>
+            <option value="3">MARÇO</option>
+            <option value="4">ABRIL</option>
+            <option value="5">MAIO</option>
+            <option value="6">JUNHO</option>
+            <option value="7">JULHO</option>
+            <option value="8">AGOSTO</option>
+            <option value="9">SETEMBRO</option>
+            <option value="10">OUTUBRO</option>
+            <option value="11">NOVEMBRO</option>
+            <option value="12">DEZEMBRO</option>
+            <option value="13">13º SALÁRIO</option>
+          </select>
+        </div>
+        <div class="col">
+          <label>Data Limite Execução</label>
+          <input [(ngModel)]="dadosModalGerarCompetencia.data_limite_execucao" type="date"
+            [ngModelOptions]="{standalone: true}" class="form-control" placeholder="">
+        </div>
+        <div class="col">
+          <label>Data Limite Transmissão</label>
+          <input type="date" [(ngModel)]="dadosModalGerarCompetencia.data_limite_transmissao"
+            [ngModelOptions]="{standalone: true}" class="form-control" placeholder="">
+        </div>
+      </div>
+    </form>
+
+    <ng-template pTemplate="footer">
+      <p-button icon="pi pi-check" label="Cancelar" styleClass="p-button-text"></p-button>
+      <p-button icon="pi pi-times" [loading]="loadingProcessingStatus" (click)="gerarCompetencia()" label="Salvar">
+      </p-button>
     </ng-template>
   </p-dialog>
 
   <!-- Modal de inclusao empresa dctf  -->
-  <p-dialog [modal]="true" [style]="{width: '50vw'}" (onHide)="emitCloseModalCreateEmpresa()"  [maximizable]="true" [baseZIndex]="10000"
-    header="Incluir Empresa DCTF-WEB" [(visible)]="displayModalCreateEmpresa" [style]="{width: '50vw'}"
-    [baseZIndex]="10000">
+  <p-dialog [modal]="true" [style]="{width: '50vw'}" (onHide)="emitCloseModalCreateEmpresa()" [maximizable]="true"
+    [baseZIndex]="10000" header="Incluir Empresa DCTF-WEB" [(visible)]="displayModalCreateEmpresa"
+    [style]="{width: '50vw'}" [baseZIndex]="10000">
     <form>
       <div class="row">
         <input type="hidden" id="id_empresa_competencia" [(ngModel)]="competenciaModal.id_empresa_competencia"
