--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -1,43 +1,38 @@
 <div class="container-fluid">
+
   <p-dropdown style="padding-bottom: 10px;" [options]="cities" [(ngModel)]="selectedCityCode" optionLabel="name"
     optionValue="code"></p-dropdown>
 
   <div style="padding-bottom: 10px;padding-top:10px" class="row">
 
-    <div class="col-6">
+    <div class="col-3">
       <span class="p-buttonset">
-        <button type="button" pButton pRipple icon="pi pi-file"  class="mr-2" pTooltip="CSV"
+        <button type="button" pButton pRipple icon="pi pi-file" class="mr-2" pTooltip="CSV"
           tooltipPosition="bottom"></button>
         <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportDataToXlsx()"
           class="p-button-success mr-2" pTooltip="XLS" tooltipPosition="bottom"></button>
         <button type="button" pButton pRipple icon="pi pi-file-pdf" class="p-button-warning mr-2" pTooltip="PDF"
           tooltipPosition="bottom"></button>
+
+        <p-button (click)="openModalGerarCompetencia()">Gerar Competencia</p-button>
       </span>
     </div>
+
     <div class="col-6">
       <div class="p-inputgroup">
         <span class="p-inputgroup-addon"><i class="pi pi-search"></i></span>
         <input type="text" [(ngModel)]="searchValue" (input)="searchData()" pInputText placeholder="Buscar">
       </div>
-
     </div>
   </div>
 
+  <app-modais-empresas [displaymodalstatusCompetencia]="modalstatusCompetencia" [idresponsavel]="idresponsavel"
+    [competenciaModal]="competenciaModal" [competenciaModalStatusCompetencia]="competenciaModalStatusCompetencia"
+    [displayModalCreateEmpresa]="displayModalCreateEmpresa" [displayModalGerarCompetencia]="modalGerarCompetencia"
+    [empresasModal]="empresasModal" (closedModalCreateEmpresa)="closedModalCreateEmpresa()"
+    (closeModalstatusCompetencia)="closeModalstatusCompetencia()"
+    (closeModalGerarCompetencia)="closeModalGerarCompetencia()" (onchangData)="onChangData()"></app-modais-empresas>
 
-  <p-toast></p-toast>
-
-
-  <app-modais-empresas 
-  [displaymodalstatusCompetencia]="modalstatusCompetencia"
-  [competenciaModal]="competenciaModal"
-  [competenciaModalStatusCompetencia]="competenciaModalStatusCompetencia"
-  [displayModalCreateEmpresa]="displayModalCreateEmpresa"
-  [empresasModal]="empresasModal"
-  (closedModalCreateEmpresa)="closedModalCreateEmpresa()"
-  (closeModalstatusCompetencia)="closeModalstatusCompetencia()"
-  (onchangData)="onChangData()"
-  ></app-modais-empresas>
-  
 
   <p-table id="excel-table" #dt (onLazyLoad)="loadPage($event, dt)" [paginator]="true" [rows]="10" [lazy]="true"
     [totalRecords]="totaldata" tyle="font-size:16px;padding:20px" [value]="data" responsiveLayout="scroll">
