--- a/src/app/pages/private/dashboard/dashboard.component.html
+++ b/src/app/pages/private/dashboard/dashboard.component.html
@@ -1,15 +1,6 @@
 <p>dashboard works!</p>
 
-<app-table-component
-    [data]="competencias"
-    [idsetor]="idsetor"
-    [totaldata]="counttotaldata"
-    (loadnextpage)="loadNextPage($event)"
-    (loadbackpage)="loadBackPage($event)"
-    [currentlast]="currentlast"
-    (searchdata)="searchCompetencia($event)"
-    (onchangData)="onChangData()"
->
+<app-table-component [data]="competencias" [idsetor]="idsetor" [idresponsavel]="idresponsavel"
+  [totaldata]="counttotaldata" (loadnextpage)="loadNextPage($event)" (loadbackpage)="loadBackPage($event)"
+  [currentlast]="currentlast" (searchdata)="searchCompetencia($event)" (onchangData)="onChangData()">
 </app-table-component>
-
-
