feat(IN-875): implementacao validacoes

--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-  <p-dropdown style="padding-bottom: 10px;" [options]="cities" [(ngModel)]="selectedCityCode" optionLabel="name"
+  <p-dropdown style="padding-bottom: 10px;" [options]="competenciasFilter"  optionLabel="name"
     optionValue="code"></p-dropdown>
 
   <div style="padding-bottom: 10px;padding-top:10px" class="row">
