--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -2,6 +2,7 @@
 
   <p-dropdown style="padding-bottom: 10px;" [options]="competenciasFilter"  optionLabel="name"
     optionValue="code"></p-dropdown>
+<p-button label="Pesquisar" ></p-button>
 
   <div style="padding-bottom: 10px;padding-top:10px" class="row">
 
