feat(IN-875): ajustes pesquisa controle

--- a/src/app/pages/private/dashboard/dashboard.component.html
+++ b/src/app/pages/private/dashboard/dashboard.component.html
@@ -2,5 +2,7 @@
 
 <app-table-component [data]="competencias" [idsetor]="idsetor" [idresponsavel]="idresponsavel"
   [totaldata]="counttotaldata" (loadnextpage)="loadNextPage($event)" (loadbackpage)="loadBackPage($event)"
-  [currentlast]="currentlast" (searchdata)="searchCompetencia($event)" (onchangData)="onChangData()">
+  [currentlast]="currentlast" (searchdata)="searchCompetencia($event)" (onchangData)="onChangData()"
+  (clearData)="clearData()"
+  >
 </app-table-component>
